--- a/ejemplosRust.ipynb
+++ b/ejemplosRust.ipynb
@@ -518,7 +518,7 @@
    "id": "bef3c9b1",
    "metadata": {},
    "source": [
-    "#### Paso 5: Compilar\n",
+    "#### Paso 5: Compilar y ejecutar y crear un json.\n",
     "\n",
     "Desde dentro del directorio del proyecto\n",
     "\n",
@@ -530,7 +530,9 @@
    "id": "7d49b0c2",
    "metadata": {},
    "source": [
-    "#### Paso5: Ejecuto con kernell python"
+    "#### Paso5: Ejecuto con kernell python\n",
+    "\n",
+    "Elijo el CondaCodingRustEnvironment"
    ]
   },
   {
